--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education App</title>
     <link rel="stylesheet" href="style.css">
     <style>
@@ -22,6 +26,9 @@
         }
         nav a:hover {
             text-decoration: underline;
+        }
+        .home-link {
+            font-size: 1.2em; /* Adjust the size as needed */
         }
         .main {
             max-width: 800px;
@@ -60,7 +67,7 @@
             width: 250px;
             text-align: center;
             transition: transform 0.2s;
-        }
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -77,7 +84,7 @@
 
     <!-- Navigation -->
     <nav>
-        <a href="#">Home</a>
+        <a href="#" class="home-link">Home</a>
         <a href="login.html">Login/Signup</a>
         <a href="courses.html">Courses</a>
         <a href="doubt.html">Doubts</a>
@@ -87,11 +94,11 @@
     <!-- Introduction Section -->
     <div class="main">
         <h1>Welcome to EduApp</h1>
-        <p>our premier online learning platform designed to empower individuals on their educational journeys. At EduApp, we believe that knowledge is the key to personal and professional growth. Our mission is to make quality education accessible to everyone, regardless of their background or experience level.</p>
+        <p>Welcome to our premier online learning platform designed to empower individuals on their educational journeys. At EduApp, we believe that knowledge is the key to personal and professional growth. Our mission is to make quality education accessible to everyone, regardless of their background or experience level.</p>
         <hr>
         <img src="123.jpg" alt="EduApp Image">
         <hr>
-        <p class="one">What We Offer:</p>
+        <h2>What We Offer:</h2>
         <p>Diverse Courses: Explore a wide range of subjects, from web development and data science to digital marketing and beyond. Our courses are tailored to meet the needs of learners at various stages.</p>
         <p>Expert Instructors: Learn from industry professionals who bring real-world experience and insights to the classroom.</p>
         <p>Flexible Learning: With our online format, you can learn at your own pace, anytime and anywhere, making it easier to balance education with your other commitments.</p>
