--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Education App</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f0f8ff;
-            margin: 0;
-            padding: 0;
         }
         nav {
             background-color: #ba218a;
@@ -31,12 +34,11 @@
             font-size: 1.2em; /* Adjust the size as needed */
         }
         .main {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh; /* Makes the main section cover the full viewport height */
         }
         h1 {
             color: #0056b3;
@@ -51,22 +53,8 @@
         }
         p {
             line-height: 1.6;
-        }
-        .course-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            margin: 20px 0;
-        }
-        .course-card {
-            background: #e7f3fe;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            margin: 10px;
-            padding: 20px;
-            width: 250px;
-            text-align: center;
-            transition: transform 0.2s;
+            text-align: center; /* Center text for better presentation */
+            max-width: 800px; /* Optional: Limit paragraph width for readability */
         }
         footer {
             text-align: center;
