--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
         img {
             border-radius: 10px;
-            max-width: 80%;
+            max-width: 100%; /* Responsive image */
             height: auto;
         }
         footer {
@@ -43,7 +43,10 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#">EduApp</a>
-        <div class="collapse navbar-collapse">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="#">Home</a>
                 <a class="nav-item nav-link" href="login.html">Login/Signup</a>
