--- a/login.html
+++ b/login.html
@@ -1,102 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Login/Signup Page</title>
+    <style>
+        body {
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            width: 100%;
+            max-width: 400px;
+        }
+        h1 {
+            text-align: center;
+        }
+        .form-container {
+            margin-top: 20px;
+        }
+        .form {
+            display: none;
+        }
+        .form.active {
+            display: block;
+        }
+    </style>
 </head>
 <body>
+
     <div class="container">
         <h1>Welcome</h1>
         <div class="form-container">
             <form id="login-form" class="form active">
-                <h2>Login Page</h2>
-                <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
-                <button type="submit">Login</button>
-                <button type="button" id="show-signup-btn">Signup</button>
+                <h2 class="text-center">Login Page</h2>
+                <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Password" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="button" id="show-signup-btn" class="btn btn-link">Signup</button>
             </form>
             <form id="signup-form" class="form">
-                <h2>Signup Page</h2>
-                <input type="text" placeholder="Username" required>
-                <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
-                <button type="submit">Signup</button>
-                <button type="button" id="back-to-login-btn">Back to Login</button>
+                <h2 class="text-center">Signup Page</h2>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Username" required>
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Password" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Signup</button>
+                <button type="button" id="back-to-login-btn" class="btn btn-link">Back to Login</button>
             </form>
         </div>
-        <section style="text-align: center; margin-top: 20px;">
-            <a href="index.html"><button class="back-button">Back</button></a>
+        <section class="text-center mt-3">
+            <a href="index.html"><button class="btn btn-secondary">Back</button></a>
         </section>
     </div>
 
-    <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        document.getElementById('show-signup-btn').addEventListener('click', function() {
+            document.getElementById('login-form').classList.remove('active');
+            document.getElementById('signup-form').classList.add('active');
+        });
+        document.getElementById('back-to-login-btn').addEventListener('click', function() {
+            document.getElementById('signup-form').classList.remove('active');
+            document.getElementById('login-form').classList.add('active');
+        });
+    </script>
 </body>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-    }
-
-    .container {
-        background: white;
-        border-radius: 8px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-        width: 300px;
-    }
-
-    h1 {
-        text-align: center;
-    }
-
-    .form-container {
-        margin-top: 20px;
-    }
-
-    .form {
-        display: none; /* Hide all forms by default */
-    }
-
-    .form.active {
-        display: block; /* Show active form */
-    }
-
-    input[type="email"],
-    input[type="password"],
-    input[type="text"] {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-    }
-
-    button {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        border: none;
-        border-radius: 4px;
-        background-color: #007bff;
-        color: white;
-        cursor: pointer;
-    }
-
-    button:hover {
-        background-color: #0056b3;
-    }
-
-    .back-button {
-        background-color: #6c757d;
-    }
-
-    .back-button:hover {
-        background-color: #5a6268;
-    }
-</style>
 </html>
