--- a/courses.html
+++ b/courses.html
@@ -4,32 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education App</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
             background-color: #f4f4f4;
-            margin: 0;
             padding: 20px;
-        }
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
         }
         .course-card {
-            background: white;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            margin: 10px;
-            padding: 20px;
-            width: 300px;
+            margin: 15px 0;
             text-align: center;
+            background: white;
         }
         h3 {
             font-size: 1.2em;
-        }
-        p {
-            color: #555;
         }
         .price {
             font-weight: bold;
@@ -49,47 +38,64 @@
     </style>
 </head>
 <body>
-    <h1>Available Courses</h1>
     <div class="container">
-        <div class="course-card">
-            <h3>Course 1: Web Development</h3>
-            <p>Duration: 10 weeks</p>
-            <p class="price">Free</p>
-            <a href="#" class="button">Enroll Now</a>
+        <h1 class="text-center my-4">Available Courses</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="course-card p-4">
+                    <h3>Course 1: Web Development</h3>
+                    <p>Duration: 10 weeks</p>
+                    <p class="price">Free</p>
+                    <a href="#" class="button">Enroll Now</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="course-card p-4">
+                    <h3>Course 2: Python for Data Science</h3>
+                    <p>Duration: 12 weeks</p>
+                    <p class="price">Paid</p>
+                    <a href="#" class="button">Enroll Now</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="course-card p-4">
+                    <h3>Course 3: Digital Marketing</h3>
+                    <p>Duration: 8 weeks</p>
+                    <p class="price">Free</p>
+                    <a href="#" class="button">Enroll Now</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="course-card p-4">
+                    <h3>Course 4: Graphic Design</h3>
+                    <p>Duration: 6 weeks</p>
+                    <p class="price">Paid</p>
+                    <a href="#" class="button">Enroll Now</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="course-card p-4">
+                    <h3>Course 5: Project Management</h3>
+                    <p>Duration: 14 weeks</p>
+                    <p class="price">Free</p>
+                    <a href="#" class="button">Enroll Now</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="course-card p-4">
+                    <h3>Course 6: Introduction to AI</h3>
+                    <p>Duration: 10 weeks</p>
+                    <p class="price">Paid</p>
+                    <a href="#" class="button">Enroll Now</a>
+                </div>
+            </div>
         </div>
-        <div class="course-card">
-            <h3>Course 2: Python for Data Science</h3>
-            <p>Duration: 12 weeks</p>
-            <p class="price">Paid</p>
-            <a href="#" class="button">Enroll Now</a>
-        </div>
-        <div class="course-card">
-            <h3>Course 3: Digital Marketing</h3>
-            <p>Duration: 8 weeks</p>
-            <p class="price">Free</p>
-            <a href="#" class="button">Enroll Now</a>
-        </div>
-        <div class="course-card">
-            <h3>Course 4: Graphic Design</h3>
-            <p>Duration: 6 weeks</p>
-            <p class="price">Paid</p>
-            <a href="#" class="button">Enroll Now</a>
-        </div>
-        <div class="course-card">
-            <h3>Course 5: Project Management</h3>
-            <p>Duration: 14 weeks</p>
-            <p class="price">Free</p>
-            <a href="#" class="button">Enroll Now</a>
-        </div>
-        <div class="course-card">
-            <h3>Course 6: Introduction to AI</h3>
-            <p>Duration: 10 weeks</p>
-            <p class="price">Paid</p>
-            <a href="#" class="button">Enroll Now</a>
+        <div class="text-center my-4">
+            <a href="index.html" class="btn btn-secondary">Back</a>
         </div>
     </div>
-    <center>
-        <a href="index.html"><p>back</p></a>
-    </center>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
