--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +29,7 @@
         }
         img {
             border-radius: 10px;
-            max-width: 100%; /* Responsive image */
+            max-width: 100%;
             height: auto;
         }
         footer {
@@ -54,6 +55,7 @@
             </div>
         </div>
     </nav>
+
     <hr>
 
     <div class="container main text-center">
@@ -70,6 +72,7 @@
         <p>Why Choose EduApp? It’s a supportive environment where you can thrive academically and professionally. Whether you're looking to upskill, switch careers, or simply pursue a passion, EduApp provides the tools and resources to help you succeed.</p>
         <p>Start your journey with EduApp today and unlock your potential!</p>
     </div>
+
     <hr>
 
     <footer class="text-center">
@@ -79,5 +82,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
 </body>
 </html>
